--- a/index.html
+++ b/index.html
@@ -1,1 +1,25 @@
-<div id="Srihihta Portfolio_1" style="width:400px;height:100vh;top:0px;left:0px;right:unset;bottom:unset;border:none;background:#ffffff;display:block;position: fixed;z-index: 99999;overflow: hidden;"><iframe id="bildrifrm_Srihihta Portfolio_1" src="https://pce19a399738c476381639b5e4a1450b0.bildr.com/portifolio" style="all:unset;width:100%;height:100%"></iframe></div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Srihitha Kanaparthi Portfolio</title>
+  <style>
+    html, body {
+      margin: 0;
+      padding: 0;
+      width: 100%;
+      height: 100%;
+      overflow: hidden;
+    }
+    iframe {
+      border: none;
+      width: 100%;
+      height: 100%;
+    }
+  </style>
+</head>
+<body>
+  <iframe src="https://pce19a399738c476381639b5e4a1450b0.bildr.com/portifolio"></iframe>
+</body>
+</html>
